nixidy/generated/prod/keycloak/HTTPRoute-keycloak-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-redirect
  namespace: identity
spec:
  hostnames:
    - keycloak.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - filters:
        - requestRedirect:
            path:
              replaceFullPath: /admin/default/console/
              type: ReplaceFullPath
            statusCode: 302
          type: RequestRedirect
      matches:
        - path:
            type: Exact
            value: /
